# openmc_data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test_package.yml  test_processing.yml  test_urls.yml
src/openmc_data/: __init__.py  urls.py  urls_chain.py  urls_h5.py  urls_xml.py  utils.py
src/openmc_data/convert/: convert_endf.py  convert_fendl.py  convert_jeff32.py  convert_jeff33.py  convert_tendl.py
src/openmc_data/depletion/: add_branching_ratios.py  generate_endf71_chain_casl.py  generate_endf_chain.py  generate_jeff_chain.py  generate_jendl_chain.py  generate_serpent_fissq.py  generate_tendl_chain.py  reduce_chain.py
src/openmc_data/download/: download_chain.py  download_endf.py  download_endf_chain.py  download_nndc.py  download_nndc_chain.py  download_tendl.py
src/openmc_data/generate/: generate_cendl.py  generate_endf.py  generate_fendl.py  generate_jeff33.py  generate_jendl.py  generate_tendl.py
src/openmc_data/other/: convert_tendl_rand.py  sample_sandy.py
tests/: test_urls.py  test_version.py
